Fixed the spacing on the right section.

--- a/less/index.less
+++ b/less/index.less
@@ -239,13 +239,6 @@ html, body {
 		.right {
 			width: 50%;
 			margin: 1%;
-			display:flex;
-			flex-direction: column;
-			justify-content: space-around;
-	
-			.rightBoxes {
-				width:100%
-			}
 
 			.work {
 				display: flex;
@@ -273,6 +266,7 @@ html, body {
 	
 			@media(max-width: 768px){
 				width: 100%;
+				padding-top: 2%;
 			}//close the media query
 	
 		}//closes the right section
